# airflow/utils/log/file_task_handler.py
@@ -19,16 +19,19 @@
 
 from __future__ import annotations
 
+import itertools
 import logging
 import os
 from collections.abc import Iterable
 from contextlib import suppress
+from datetime import datetime
 from enum import Enum
 from pathlib import Path
 from typing import TYPE_CHECKING, Any, Callable
 from urllib.parse import urljoin
 
 import pendulum
+from pydantic import BaseModel, ConfigDict, ValidationError
 
 from airflow.configuration import conf
 from airflow.exceptions import AirflowException
@@ -45,6 +48,18 @@ if TYPE_CHECKING:
     from airflow.models.taskinstancekey import TaskInstanceKey
 
 logger = logging.getLogger(__name__)
+
+
+class StructuredLogMessage(BaseModel):
+    """An individual log message."""
+
+    timestamp: datetime | None
+    event: str
+
+    # We don't need to cache string when parsing in to this, as almost every line will have a different
+    # values; `extra=allow` means we'll create extra properties as needed. Only timestamp and event are
+    # required, everything else is up to what ever is producing the logs
+    model_config = ConfigDict(cache_strings=False, extra="allow")
 
 
 class LogType(str, Enum):
@@ -107,30 +122,30 @@ if not _parse_timestamp:
         return pendulum.parse(timestamp_str.strip("[]"))
 
 
-def _parse_timestamps_in_log_file(lines: Iterable[str]):
+def _parse_log_lines(lines: Iterable[str]) -> Iterable[tuple[int, datetime | None, StructuredLogMessage]]:
     timestamp = None
     next_timestamp = None
     for idx, line in enumerate(lines):
         if line:
-            with suppress(Exception):
-                # next_timestamp unchanged if line can't be parsed
-                next_timestamp = _parse_timestamp(line)
-            if next_timestamp:
-                timestamp = next_timestamp
-            yield timestamp, idx, line
+            try:
+                # Try to parse it as json first
+                log = StructuredLogMessage.model_validate_json(line)
+            except ValidationError:
+                with suppress(Exception):
+                    # If we can't parse the timestamp, don't attach one to the row
+                    next_timestamp = _parse_timestamp(line)
+                log = StructuredLogMessage.model_construct(event=line, timestamp=next_timestamp)
+            if log.timestamp:
+                timestamp = log.timestamp
+            yield idx, timestamp, log
 
 
-def _interleave_logs(*logs):
-    records = []
-    for log in logs:
-        records.extend(_parse_timestamps_in_log_file(log.splitlines()))
-    last = None
-    for timestamp, _, line in sorted(
-        records, key=lambda x: (x[0], x[1]) if x[0] else (pendulum.datetime(2000, 1, 1), x[1])
-    ):
-        if line != last or not timestamp:  # dedupe
-            yield line
-        last = line
+def _interleave_logs(*logs) -> Iterable[StructuredLogMessage]:
+    min_date = pendulum.datetime(2000, 1, 1)
+
+    records = itertools.chain.from_iterable(_parse_log_lines(log.splitlines(log)) for log in logs)
+    for _, _, msg in sorted(records, key=lambda x: (x[1] or min_date, x[0])):
+        yield msg
 
 
 def _ensure_ti(ti: TaskInstanceKey | TaskInstance, session) -> TaskInstance:
@@ -297,9 +312,6 @@ class FileTaskHandler(logging.Handler):
         else:
             raise RuntimeError(f"Unable to render log filename for {ti}. This should never happen")
 
-    def _read_grouped_logs(self):
-        return False
-
     def _get_executor_get_task_log(
         self, ti: TaskInstance
     ) -> Callable[[TaskInstance, int], tuple[list[str], list[str]]]:
@@ -351,40 +363,40 @@ class FileTaskHandler(logging.Handler):
         # initializing the handler. Thus explicitly getting log location
         # is needed to get correct log path.
         worker_log_rel_path = self._render_filename(ti, try_number)
-        messages_list: list[str] = []
+        source_list: list[str] = []
         remote_logs: list[str] = []
         local_logs: list[str] = []
-        executor_messages: list[str] = []
+        sources: list[str] = []
         executor_logs: list[str] = []
         served_logs: list[str] = []
         with suppress(NotImplementedError):
-            remote_messages, remote_logs = self._read_remote_logs(ti, try_number, metadata)
-            messages_list.extend(remote_messages)
+            sources, remote_logs = self._read_remote_logs(ti, try_number, metadata)
+            source_list.extend(sources)
         has_k8s_exec_pod = False
         if ti.state == TaskInstanceState.RUNNING:
             executor_get_task_log = self._get_executor_get_task_log(ti)
             response = executor_get_task_log(ti, try_number)
             if response:
-                executor_messages, executor_logs = response
-            if executor_messages:
-                messages_list.extend(executor_messages)
+                sources, executor_logs = response
+            if sources:
+                source_list.extend(sources)
                 has_k8s_exec_pod = True
         if not (remote_logs and ti.state not in State.unfinished):
             # when finished, if we have remote logs, no need to check local
             worker_log_full_path = Path(self.local_base, worker_log_rel_path)
-            local_messages, local_logs = self._read_from_local(worker_log_full_path)
-            messages_list.extend(local_messages)
+            sources, local_logs = self._read_from_local(worker_log_full_path)
+            source_list.extend(sources)
         if ti.state in (TaskInstanceState.RUNNING, TaskInstanceState.DEFERRED) and not has_k8s_exec_pod:
-            served_messages, served_logs = self._read_from_logs_server(ti, worker_log_rel_path)
-            messages_list.extend(served_messages)
+            sources, served_logs = self._read_from_logs_server(ti, worker_log_rel_path)
+            source_list.extend(sources)
         elif ti.state not in State.unfinished and not (local_logs or remote_logs):
             # ordinarily we don't check served logs, with the assumption that users set up
             # remote logging or shared drive for logs for persistence, but that's not always true
             # so even if task is done, if no local logs or remote logs are found, we'll check the worker
-            served_messages, served_logs = self._read_from_logs_server(ti, worker_log_rel_path)
-            messages_list.extend(served_messages)
+            sources, served_logs = self._read_from_logs_server(ti, worker_log_rel_path)
+            source_list.extend(sources)
 
-        logs = "\n".join(
+        logs = list(
             _interleave_logs(
                 *local_logs,
                 *remote_logs,
@@ -395,18 +407,22 @@ class FileTaskHandler(logging.Handler):
         log_pos = len(logs)
         # Log message source details are grouped: they are not relevant for most users and can
         # distract them from finding the root cause of their errors
-        messages = " INFO - ::group::Log message source details\n"
-        messages += "".join([f"*** {x}\n" for x in messages_list])
-        messages += " INFO - ::endgroup::\n"
+        header = [
+            StructuredLogMessage.model_construct(
+                event="::group::Log message source details", sources=source_list
+            ),
+            StructuredLogMessage.model_construct(event="::endgroup::"),
+        ]
         end_of_log = ti.try_number != try_number or ti.state not in (
             TaskInstanceState.RUNNING,
             TaskInstanceState.DEFERRED,
         )
         if metadata and "log_pos" in metadata:
-            previous_chars = metadata["log_pos"]
-            logs = logs[previous_chars:]  # Cut off previously passed log test as new tail
-        out_message = logs if "log_pos" in (metadata or {}) else messages + logs
-        return out_message, {"end_of_log": end_of_log, "log_pos": log_pos}
+            previous_line = metadata["log_pos"]
+            logs = logs[previous_line:]  # Cut off previously passed log test as new tail
+        else:
+            logs = header + logs
+        return logs, {"end_of_log": end_of_log, "log_pos": log_pos}
 
     @staticmethod
     def _get_pod_namespace(ti: TaskInstance):
@@ -439,7 +455,9 @@ class FileTaskHandler(logging.Handler):
             log_relative_path,
         )
 
-    def read(self, task_instance, try_number=None, metadata=None):
+    def read(
+        self, task_instance, try_number: int, metadata=None
+    ) -> tuple[list[StructuredLogMessage] | str, dict[str, Any]]:
         """
         Read logs of given task instance from local machine.
 
@@ -449,33 +467,15 @@ class FileTaskHandler(logging.Handler):
         :param metadata: log metadata, can be used for steaming log reading and auto-tailing.
         :return: a list of listed tuples which order log string by host
         """
-        # Task instance increments its try number when it starts to run.
-        # So the log for a particular task try will only show up when
-        # try number gets incremented in DB, i.e logs produced the time
-        # after cli run and before try_number + 1 in DB will not be displayed.
-        if try_number is None:
-            next_try = task_instance.try_number + 1
-            try_numbers = list(range(1, next_try))
-        elif try_number < 1:
+        if try_number is None or try_number < 1:
             logs = [
-                [("default_host", f"Error fetching the logs. Try number {try_number} is invalid.")],
+                StructuredLogMessage.model_construct(
+                    level="error", event=f"Error fetching the logs. Try number {try_number} is invalid."
+                )
             ]
-            return logs, [{"end_of_log": True}]
-        else:
-            try_numbers = [try_number]
+            return logs, {"end_of_log": True}
 
-        logs = [""] * len(try_numbers)
-        metadata_array = [{}] * len(try_numbers)
-
-        # subclasses implement _read and may not have log_type, which was added recently
-        for i, try_number_element in enumerate(try_numbers):
-            log, out_metadata = self._read(task_instance, try_number_element, metadata)
-            # es_task_handler return logs grouped by host. wrap other handler returning log string
-            # with default/ empty host so that UI can render the response in the same way
-            logs[i] = log if self._read_grouped_logs() else [(task_instance.hostname, log)]
-            metadata_array[i] = out_metadata
-
-        return logs, metadata_array
+        return self._read(task_instance, try_number, metadata)
 
     @staticmethod
     def _prepare_log_folder(directory: Path, new_folder_permissions: int):
@@ -542,23 +542,20 @@ class FileTaskHandler(logging.Handler):
 
     @staticmethod
     def _read_from_local(worker_log_path: Path) -> tuple[list[str], list[str]]:
-        messages = []
         paths = sorted(worker_log_path.parent.glob(worker_log_path.name + "*"))
-        if paths:
-            messages.append("Found local files:")
-            messages.extend(f"  * {x}" for x in paths)
+        sources = [os.fspath(x) for x in paths]
         logs = [file.read_text() for file in paths]
-        return messages, logs
+        return sources, logs
 
     def _read_from_logs_server(self, ti, worker_log_rel_path) -> tuple[list[str], list[str]]:
-        messages = []
+        sources = []
         logs = []
         try:
             log_type = LogType.TRIGGER if ti.triggerer_job else LogType.WORKER
             url, rel_path = self._get_log_retrieval_url(ti, worker_log_rel_path, log_type=log_type)
             response = _fetch_logs_from_service(url, rel_path)
             if response.status_code == 403:
-                messages.append(
+                sources.append(
                     "!!!! Please make sure that all your Airflow components (e.g. "
                     "schedulers, webservers, workers and triggerer) have "
                     "the same 'secret_key' configured in 'webserver' section and "
@@ -566,20 +563,21 @@ class FileTaskHandler(logging.Handler):
                     "See more at https://airflow.apache.org/docs/apache-airflow/"
                     "stable/configurations-ref.html#secret-key"
                 )
-            # Check if the resource was properly fetched
-            response.raise_for_status()
-            if response.text:
-                messages.append(f"Found logs served from host {url}")
-                logs.append(response.text)
+            else:
+                # Check if the resource was properly fetched
+                response.raise_for_status()
+                if response.text:
+                    sources.append(url)
+                    logs.append(response.text)
         except Exception as e:
             from requests.exceptions import InvalidSchema
 
             if isinstance(e, InvalidSchema) and ti.task.inherits_from_empty_operator is True:
-                messages.append(self.inherits_from_empty_operator_log_message)
+                sources.append(self.inherits_from_empty_operator_log_message)
             else:
-                messages.append(f"Could not read served logs: {e}")
+                sources.append(f"Could not read served logs: {e}")
                 logger.exception("Could not read served logs")
-        return messages, logs
+        return sources, logs
 
     def _read_remote_logs(self, ti, try_number, metadata=None) -> tuple[list[str], list[str]]:
         """
